--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<a class="dl-button" href="">
+<a class="dl-button" href="./FDS_q2_merged.pdf" download="ML_q2">
   <div>
     <div class="icon">
       <div>
