--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <title>CodePen - Download button animation </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;display=swap'><link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
-  
+<!--   
   <form method="get" action="./FDS_q2_merged.pdf">
    <button type="submit">Download!</button>
-  </form>
+  </form> -->
+  
+  <a href="./FDS_q2_merged.pdf" download="ML_q2.pdf">
+         <button class="btn" type="button"><i class="fa fa-download"></i> Download</button>
+   </a>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
 
