--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./FDS_q2_merged.pdf" download="ML_q2.pdf">
-         <button class="btn" type="button"><i class="fa fa-download"></i> Download</button>
+  <a href="./ML_merged.pdf" download="ML.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
    </a>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
