--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 <body>
 <!--   
-  <form method="get" action="./hadoop.pdf">
+  <form method="get" action="./ML_quiz.pdf">
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./hadoop.pdf" download="hadoop.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
+  <a href="./ML_quiz.pdf" download="ML.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download ML</button>
+   </a>
+  
+    <a href="./ES_quiz.pdf" download="ES.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download ES</button>
    </a>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
