--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./ML_quiz.pdf" download="ML.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download ML</button>
+  <a href="./Chapter_4_V6.11.pdf" download="cn.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
    </a>
-  
-  <br>
-    <br>
-    <br>
-  
-    <a href="./ES_quiz.pdf" download="ES.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download ES</button>
-   </a>
-  
+ 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
