--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./es.pdf" download="cn.pdf">
+  <a href="./es.pdf" download="es.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
    </a>
  
