--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <!--   
-  <form method="get" action="./evs.pdf">
+  <form method="get" action="./DS.pdf">
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./evs.pdf" download="evs.pdf">
+  <a href="./DS.pdf" download="DS.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
    </a>
  
