--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   </form> -->
   
   <a href="./nndl.pdf" download="nndl.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download</button>
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download NNDL</button>
+   </a>
+  
+    <a href="./cc.pdf" download="cc.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download Cloud</button>
    </a>
  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
