--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 <!--   
-  <form method="get" action="./nndl.pdf">
+  <form method="get" action="./SE.pdf">
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./nndl.pdf" download="nndl.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download NNDL</button>
+  <a href="./SE.pdf" download="SE.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download SE</button>
    </a>
   
     <a href="./cc.pdf" download="cc.pdf">
