--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <a href="./SE.pdf" download="SE.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download SE</button>
    </a>
+  
+    <a href="./PPL Codes.pdf" download="PPL Codes.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download PPL</button>
+   </a>
  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
 
