--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
    <button type="submit">Download!</button>
   </form> -->
   
-  <a href="./SE.pdf" download="SE.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download SE</button>
-   </a>
-  
-    <a href="./PPL Codes.pdf" download="PPL Codes.pdf">
+    <a href="./PPL.pdf" download="PPL.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download PPL</button>
    </a>
  
