--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    <button type="submit">Download!</button>
   </form> -->
   
-    <a href="./DS.pdf" download="DS.pdf">
-         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download DS</button>
+    <a href="./cs.pdf" download="cs.pdf">
+         <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download CS</button>
    </a>
  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
