--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <form method="get" action="./SE.pdf">
    <button type="submit">Download!</button>
   </form> -->
-  
-    <a href="./cc.pdf" download="cc.pdf">
+  <iframe src="./ds.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+<!--     <a href="./cc.pdf" download="cc.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download CC</button>
-   </a>
+   </a> -->
  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
 
