--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width">
   <title>Exams help </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"> 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;display=swap'><link rel="stylesheet" href="./style.css">
@@ -13,7 +14,8 @@
   <form method="get" action="./SE.pdf">
    <button type="submit">Download!</button>
   </form> -->
-  <iframe src="./ds.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <object data="./ds.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+</body>
 <!--     <a href="./cc.pdf" download="cc.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download CC</button>
    </a> -->
