--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <form method="get" action="./SE.pdf">
    <button type="submit">Download!</button>
   </form> -->
-  <object data="./mpi4py.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
+  <object data="./uml.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
 </body>
 <!--     <a href="./cc.pdf" download="cc.pdf">
          <button class="btn" type="button" id="this-btn"><i class="fa fa-download"></i> Download CC</button>
